--- a/gosha_react.html
+++ b/gosha_react.html
@@ -10,12 +10,15 @@
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="рол"></div>
     <script type="text/babel">
 
       ReactDOM.render(
-        <h1>Hello, world!</h1>,
-        document.getElementById('root')
+        <div>
+          <h1>Hello, world!</h1>
+        </div>
+        ,
+        document.getElementById('рол')
       );
 
     </script>
